Make image loadImage function generic Add basic user detail view controller

--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="jNz-Zg-iqf" kind="show" trigger="accessoryAction" id="zjV-Cd-BYF"/>
+                                    <segue destination="jNz-Zg-iqf" kind="show" identifier="ShowUserDetail" id="CD3-jg-HXW"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -53,17 +53,64 @@
             </objects>
             <point key="canvasLocation" x="865.21739130434787" y="20.758928571428569"/>
         </scene>
-        <!--View Controller-->
+        <!--User-->
         <scene sceneID="SE6-AX-agb">
             <objects>
-                <viewController id="jNz-Zg-iqf" sceneMemberID="viewController">
+                <viewController id="jNz-Zg-iqf" customClass="UserDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eCC-Zd-e60">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hbp-Tb-rcx">
+                                <rect key="frame" x="20" y="261" width="374" height="374"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Hbp-Tb-rcx" secondAttribute="height" multiplier="1:1" id="TxM-Cm-7VF"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" axis="vertical" distribution="equalSpacing" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="O35-7e-ZVx">
+                                <rect key="frame" x="20" y="751.5" width="374" height="90.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AYm-hY-j0y">
+                                        <rect key="frame" x="0.0" y="0.0" width="71.5" height="33.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAB-1k-fi1">
+                                        <rect key="frame" x="0.0" y="41.5" width="49" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IQ9-OV-q2D">
+                                        <rect key="frame" x="0.0" y="70" width="41" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Hbp-Tb-rcx" firstAttribute="centerY" secondItem="eCC-Zd-e60" secondAttribute="centerY" id="DBf-pZ-aCV"/>
+                            <constraint firstItem="Hbp-Tb-rcx" firstAttribute="top" relation="greaterThanOrEqual" secondItem="rVL-54-J8U" secondAttribute="top" constant="8" id="Fb5-kt-s4K"/>
+                            <constraint firstItem="rVL-54-J8U" firstAttribute="trailing" secondItem="Hbp-Tb-rcx" secondAttribute="trailing" constant="20" id="GmX-85-74Q"/>
+                            <constraint firstItem="rVL-54-J8U" firstAttribute="trailing" secondItem="O35-7e-ZVx" secondAttribute="trailing" constant="20" id="Jt9-eb-MrJ"/>
+                            <constraint firstItem="O35-7e-ZVx" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Hbp-Tb-rcx" secondAttribute="bottom" constant="8" id="T2n-aK-D7Q"/>
+                            <constraint firstItem="Hbp-Tb-rcx" firstAttribute="leading" secondItem="rVL-54-J8U" secondAttribute="leading" constant="20" id="T4W-Pf-niA"/>
+                            <constraint firstItem="O35-7e-ZVx" firstAttribute="leading" secondItem="rVL-54-J8U" secondAttribute="leading" constant="20" id="nhH-Ld-4q9"/>
+                            <constraint firstItem="rVL-54-J8U" firstAttribute="bottom" secondItem="O35-7e-ZVx" secondAttribute="bottom" constant="20" id="yxS-Ub-Ldo"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="rVL-54-J8U"/>
                     </view>
-                    <navigationItem key="navigationItem" id="ofM-6R-w7v"/>
+                    <navigationItem key="navigationItem" title="User" id="ofM-6R-w7v"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="IQ9-OV-q2D" id="HN4-Jh-VhL"/>
+                        <outlet property="imageView" destination="Hbp-Tb-rcx" id="dxK-n2-GAl"/>
+                        <outlet property="nameLabel" destination="AYm-hY-j0y" id="SXA-c4-wcg"/>
+                        <outlet property="phoneLabel" destination="cAB-1k-fi1" id="9NZ-q3-4eg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oCU-8R-yEV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
