Add button to fetch more users

--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -16,6 +16,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="a3X-Ou-2sX">
+                            <rect key="frame" x="0.0" y="99.5" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MaK-zQ-qB9">
+                                    <rect key="frame" x="146" y="7" width="122" height="30"/>
+                                    <state key="normal" title="Fetch More Users"/>
+                                    <connections>
+                                        <action selector="fetchMoreUsersTapped:" destination="VVC-vL-eiF" eventType="touchUpInside" id="nvI-oM-krY"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstItem="MaK-zQ-qB9" firstAttribute="centerY" secondItem="a3X-Ou-2sX" secondAttribute="centerY" id="Awh-ih-1TU"/>
+                                <constraint firstItem="MaK-zQ-qB9" firstAttribute="centerX" secondItem="a3X-Ou-2sX" secondAttribute="centerX" id="t1P-i0-pQl"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="UserCell" textLabel="Jbw-VO-4NK" imageView="9ob-K2-0eC" style="IBUITableViewCellStyleDefault" id="YvY-DC-pnd">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
