--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -24,26 +24,29 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TJM-Fx-FAQ">
-                                            <rect key="frame" x="20" y="0.0" width="50" height="50"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="TJM-Fx-FAQ" secondAttribute="height" multiplier="1:1" id="IdV-aM-BLL"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OqE-dQ-gvQ">
-                                            <rect key="frame" x="78.333333333333343" y="14.666666666666664" width="315.66666666666663" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="jNS-IT-v3H">
+                                            <rect key="frame" x="20" y="0.0" width="374" height="50"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TJM-Fx-FAQ">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="TJM-Fx-FAQ" secondAttribute="height" multiplier="1:1" id="IdV-aM-BLL"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OqE-dQ-gvQ">
+                                                    <rect key="frame" x="58" y="0.0" width="316" height="50"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="OqE-dQ-gvQ" secondAttribute="trailing" constant="20" id="H79-ev-Eeu"/>
-                                        <constraint firstItem="OqE-dQ-gvQ" firstAttribute="leading" secondItem="TJM-Fx-FAQ" secondAttribute="trailing" constant="8.3300000000000001" id="Kg0-1a-bgc"/>
-                                        <constraint firstItem="OqE-dQ-gvQ" firstAttribute="centerY" secondItem="lTj-C8-5zw" secondAttribute="centerY" id="nnz-3X-d9U"/>
-                                        <constraint firstAttribute="bottom" secondItem="TJM-Fx-FAQ" secondAttribute="bottom" id="oDg-1F-veZ"/>
-                                        <constraint firstItem="TJM-Fx-FAQ" firstAttribute="leading" secondItem="lTj-C8-5zw" secondAttribute="leading" constant="20" id="qnA-bS-qSP"/>
-                                        <constraint firstItem="TJM-Fx-FAQ" firstAttribute="top" secondItem="lTj-C8-5zw" secondAttribute="top" id="z5U-yx-QY9"/>
+                                        <constraint firstItem="jNS-IT-v3H" firstAttribute="top" secondItem="lTj-C8-5zw" secondAttribute="top" id="6eE-Zx-cIZ"/>
+                                        <constraint firstItem="jNS-IT-v3H" firstAttribute="leading" secondItem="lTj-C8-5zw" secondAttribute="leading" constant="20" id="9nB-EW-bHZ"/>
+                                        <constraint firstAttribute="bottom" secondItem="jNS-IT-v3H" secondAttribute="bottom" id="APw-zP-R14"/>
+                                        <constraint firstAttribute="trailing" secondItem="jNS-IT-v3H" secondAttribute="trailing" constant="20" id="NCc-e3-WVL"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
