--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NXG-k4-VLP">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
@@ -13,45 +13,32 @@
             <objects>
                 <tableViewController id="Acz-lx-rIW" customClass="UserTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="VUb-UQ-c9d">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="120" id="UfF-P6-x3o" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="120"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UfF-P6-x3o" id="NLT-2M-ite">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="174" translatesAutoresizingMaskIntoConstraints="NO" id="rRY-X7-Voe">
-                                            <rect key="frame" x="8" y="35" width="359" height="50"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fI8-Tw-MsS">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="50" id="1IE-vY-TgB"/>
-                                                        <constraint firstAttribute="width" secondItem="fI8-Tw-MsS" secondAttribute="height" multiplier="1:1" id="5AU-cm-x3I"/>
-                                                        <constraint firstAttribute="width" constant="50" id="PvA-ea-WMw"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Rg-eP-QEE">
-                                                    <rect key="frame" x="224" y="0.0" width="135" height="50"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </stackView>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fI8-Tw-MsS">
+                                            <rect key="frame" x="8" y="35" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="1IE-vY-TgB"/>
+                                                <constraint firstAttribute="width" secondItem="fI8-Tw-MsS" secondAttribute="height" multiplier="1:1" id="5AU-cm-x3I"/>
+                                                <constraint firstAttribute="width" constant="50" id="PvA-ea-WMw"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="rRY-X7-Voe" firstAttribute="centerY" secondItem="NLT-2M-ite" secondAttribute="centerY" id="YLX-qx-8yv"/>
-                                        <constraint firstAttribute="trailing" secondItem="rRY-X7-Voe" secondAttribute="trailing" constant="8" id="bUS-MV-Qq4"/>
-                                        <constraint firstItem="rRY-X7-Voe" firstAttribute="leading" secondItem="NLT-2M-ite" secondAttribute="leading" constant="8" id="fBk-hs-FRl"/>
+                                        <constraint firstItem="fI8-Tw-MsS" firstAttribute="centerY" secondItem="NLT-2M-ite" secondAttribute="centerY" id="LrG-sT-5jm"/>
+                                        <constraint firstItem="fI8-Tw-MsS" firstAttribute="leading" secondItem="NLT-2M-ite" secondAttribute="leading" constant="8" id="PCy-uP-1jm"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="nameLabel" destination="9Rg-eP-QEE" id="gam-lS-JD1"/>
                                     <outlet property="userImageView" destination="fI8-Tw-MsS" id="LbM-2T-y49"/>
                                     <segue destination="YAd-uc-ago" kind="show" identifier="ShowDetailSegue" id="x8g-bP-jo3"/>
                                 </connections>
@@ -72,41 +59,41 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zX9-MP-jcM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="754" y="-149"/>
+            <point key="canvasLocation" x="752.79999999999995" y="-149.77511244377811"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="ec8-gg-49Z">
             <objects>
                 <viewController id="YAd-uc-ago" customClass="DetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lgL-2A-QUl">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XKE-Yv-hvK">
-                                <rect key="frame" x="62.5" y="94" width="250" height="250"/>
+                                <rect key="frame" x="32" y="138" width="350" height="350"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="250" id="9NT-JR-Yw2"/>
+                                    <constraint firstAttribute="width" constant="350" id="9NT-JR-Yw2"/>
                                     <constraint firstAttribute="width" secondItem="XKE-Yv-hvK" secondAttribute="height" multiplier="1:1" id="I4f-Ks-iUa"/>
-                                    <constraint firstAttribute="height" constant="250" id="od6-Kj-QiT"/>
+                                    <constraint firstAttribute="height" constant="350" id="od6-Kj-QiT"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="fIc-2G-xIb">
-                                <rect key="frame" x="40" y="384" width="295" height="243"/>
+                                <rect key="frame" x="40" y="508" width="334" height="104"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mc0-JP-rJ3">
-                                        <rect key="frame" x="0.0" y="0.0" width="295" height="75.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mc0-JP-rJ3">
+                                        <rect key="frame" x="0.0" y="0.0" width="334" height="29.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BKR-YJ-oKJ">
+                                        <rect key="frame" x="0.0" y="37.5" width="334" height="29"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BKR-YJ-oKJ">
-                                        <rect key="frame" x="0.0" y="83.5" width="295" height="76"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FpM-oz-10n">
-                                        <rect key="frame" x="0.0" y="167.5" width="295" height="75.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FpM-oz-10n">
+                                        <rect key="frame" x="0.0" y="74.5" width="334" height="29.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -116,10 +103,10 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Eda-TQ-fmF" firstAttribute="bottom" secondItem="fIc-2G-xIb" secondAttribute="bottom" constant="40" id="Lrc-Rl-LVa"/>
+                            <constraint firstItem="Eda-TQ-fmF" firstAttribute="bottom" secondItem="fIc-2G-xIb" secondAttribute="bottom" constant="250" id="Lrc-Rl-LVa"/>
                             <constraint firstItem="fIc-2G-xIb" firstAttribute="leading" secondItem="Eda-TQ-fmF" secondAttribute="leading" constant="40" id="SOm-kJ-fpb"/>
                             <constraint firstItem="Eda-TQ-fmF" firstAttribute="trailing" secondItem="fIc-2G-xIb" secondAttribute="trailing" constant="40" id="ff6-H4-HSM"/>
-                            <constraint firstItem="fIc-2G-xIb" firstAttribute="top" secondItem="XKE-Yv-hvK" secondAttribute="bottom" constant="40" id="ll1-ja-cPR"/>
+                            <constraint firstItem="fIc-2G-xIb" firstAttribute="top" secondItem="XKE-Yv-hvK" secondAttribute="bottom" constant="20" id="ll1-ja-cPR"/>
                             <constraint firstItem="XKE-Yv-hvK" firstAttribute="centerX" secondItem="Eda-TQ-fmF" secondAttribute="centerX" id="nXE-q3-KfF"/>
                             <constraint firstItem="XKE-Yv-hvK" firstAttribute="top" secondItem="Eda-TQ-fmF" secondAttribute="top" constant="50" id="x7d-Gh-sDf"/>
                         </constraints>
@@ -143,7 +130,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NXG-k4-VLP" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="c0b-sF-7bG">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
