--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5du-Tj-twE">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Users-->
+        <scene sceneID="uVS-By-slQ">
+            <objects>
+                <tableViewController id="gna-ha-Hbp" customClass="UsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="pit-Bm-tae">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="UserCell" id="Wj9-qo-7gf" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="47.333332061767578"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Wj9-qo-7gf" id="Jo7-3Z-H78">
+                                    <rect key="frame" x="0.0" y="0.0" width="383" height="47.333332061767578"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JMy-21-5Fe">
+                                            <rect key="frame" x="20.000000000000004" y="0.0" width="47.333333333333343" height="47.333333333333336"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="JMy-21-5Fe" secondAttribute="height" multiplier="1:1" id="PCk-3r-RAq"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Yl-8y-9bG">
+                                            <rect key="frame" x="87.333333333333329" y="12.999999999999998" width="42.333333333333329" height="21.333333333333329"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="2Yl-8y-9bG" firstAttribute="top" secondItem="Jo7-3Z-H78" secondAttribute="topMargin" constant="2" id="1FN-wq-Jzs"/>
+                                        <constraint firstAttribute="bottom" secondItem="JMy-21-5Fe" secondAttribute="bottom" id="5eN-4u-3wu"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="2Yl-8y-9bG" secondAttribute="bottom" constant="2" id="EKi-NK-3Na"/>
+                                        <constraint firstItem="2Yl-8y-9bG" firstAttribute="leading" secondItem="JMy-21-5Fe" secondAttribute="trailing" constant="20" id="GlB-f8-Mtz"/>
+                                        <constraint firstItem="JMy-21-5Fe" firstAttribute="leading" secondItem="Jo7-3Z-H78" secondAttribute="leading" constant="20" id="Ygb-dN-dPL"/>
+                                        <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="2Yl-8y-9bG" secondAttribute="trailing" constant="254" id="lxR-cp-jdh"/>
+                                        <constraint firstItem="JMy-21-5Fe" firstAttribute="top" secondItem="Jo7-3Z-H78" secondAttribute="top" id="sMC-Hr-B1O"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="userImageView" destination="JMy-21-5Fe" id="EzP-Pk-Oms"/>
+                                    <outlet property="userNameLabel" destination="2Yl-8y-9bG" id="aLo-1X-vQK"/>
+                                    <segue destination="4gj-fg-0Zo" kind="show" identifier="UserDetailShowSegue" id="5GA-qp-5Kd"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="gna-ha-Hbp" id="6Hd-z7-eLu"/>
+                            <outlet property="delegate" destination="gna-ha-Hbp" id="J1Q-mT-FDQ"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Users" id="ZSz-u0-zwX">
+                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="phM-Be-Ex6">
+                            <connections>
+                                <action selector="searchUsersTapped:" destination="gna-ha-Hbp" id="u4z-4r-Cl9"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oSO-pl-grV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1078.2608695652175" y="159.375"/>
+        </scene>
+        <!--User Detail View Controller-->
+        <scene sceneID="6ia-QM-IeJ">
+            <objects>
+                <viewController id="4gj-fg-0Zo" customClass="UserDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bnI-dq-r0M">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="2IC-QX-fq2"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="dLa-Pu-gI0"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mCF-NI-Yr4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1916" y="159"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="r3g-lJ-PNZ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5du-Tj-twE" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qOn-qU-fZn">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="gna-ha-Hbp" kind="relationship" relationship="rootViewController" id="hw6-4D-ZCR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FWp-dw-UF1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="168.11594202898553" y="159.375"/>
+        </scene>
+    </scenes>
 </document>
